# finance-engine-mcp-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Containerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
mcpb/: manifest.json
scripts/: image.sh  sync-manifest-version.sh
src/: mcp_server.rs  sse_server.rs  stdio_server.rs
src/common/: finance_engine.rs  metrics.rs  mod.rs
