[package]
name = "finance-engine-mcp-server"
version = "1.0.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.5.0", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "auth",
] }
tokio = { version = "1.46", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "1.0", optional = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14" }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }

tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }

prometheus = "0.13"
once_cell = "1.19"

[package.metadata.release]
# Don't publish to crates.io (since this is a binary project)
publish = false
# Don't push git tags (you can enable this if you want)
push = false
# Run pre-release hook
pre-release-hook = ["scripts/sync-manifest-version.sh"]
# Create git tag with 'v' prefix
tag-name = "v{{version}}"
# Sign tags (optional)
sign-tag = false

[[bin]]
name = "stdio_server"
path = "src/stdio_server.rs"

[[bin]]
name = "sse_server"
path = "src/sse_server.rs"

[[bin]]
name = "mcp_server"
path = "src/mcp_server.rs"
